--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -12,7 +12,7 @@
 
 
         <ImageView
-            android:id="@+id/iv_avatar_time_1"
+            android:id="@+id/iv_home_team"
             android:layout_width="@dimen/team_image_size"
             android:layout_height="@dimen/team_image_size"
             android:layout_margin="@dimen/margin_default"
@@ -21,27 +21,27 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tv_team_1"
+            android:id="@+id/tv_home_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_default"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/iv_avatar_time_1"
-            app:layout_constraintStart_toStartOf="@id/iv_avatar_time_1"
-            app:layout_constraintTop_toBottomOf="@id/iv_avatar_time_1"
+            app:layout_constraintEnd_toEndOf="@id/iv_home_team"
+            app:layout_constraintStart_toStartOf="@id/iv_home_team"
+            app:layout_constraintTop_toBottomOf="@id/iv_home_team"
             tools:text="Time 1" />
 
         <TextView
-            android:id="@+id/tv_score_team_1"
+            android:id="@+id/tv_score_home_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/iv_avatar_time_1"
+            app:layout_constraintBottom_toBottomOf="@id/iv_home_team"
             app:layout_constraintEnd_toStartOf="@id/tv_x"
-            app:layout_constraintStart_toEndOf="@id/iv_avatar_time_1"
-            app:layout_constraintTop_toTopOf="@id/iv_avatar_time_1"
+            app:layout_constraintStart_toEndOf="@id/iv_home_team"
+            app:layout_constraintTop_toTopOf="@id/iv_home_team"
             tools:text="2" />
 
         <TextView
@@ -51,26 +51,26 @@
             android:text="@string/txt_versus"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/iv_avatar_time_1"
+            app:layout_constraintBottom_toBottomOf="@id/iv_home_team"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_avatar_time_1" />
+            app:layout_constraintTop_toTopOf="@id/iv_home_team" />
 
         <TextView
-            android:id="@+id/tv_score_team_2"
+            android:id="@+id/tv_score_away_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/iv_avatar_time_1"
-            app:layout_constraintEnd_toStartOf="@id/iv_avatar_time_2"
+            app:layout_constraintBottom_toBottomOf="@id/iv_home_team"
+            app:layout_constraintEnd_toStartOf="@id/iv_away_team"
             app:layout_constraintStart_toEndOf="@id/tv_x"
-            app:layout_constraintTop_toTopOf="@id/iv_avatar_time_1"
+            app:layout_constraintTop_toTopOf="@id/iv_home_team"
             tools:text="1" />
 
 
         <ImageView
-            android:id="@+id/iv_avatar_time_2"
+            android:id="@+id/iv_away_team"
             android:layout_width="@dimen/team_image_size"
             android:layout_height="@dimen/team_image_size"
             android:layout_margin="@dimen/margin_default"
@@ -79,15 +79,15 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tv_team_2"
+            android:id="@+id/tv_away_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_default"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/iv_avatar_time_2"
-            app:layout_constraintStart_toStartOf="@id/iv_avatar_time_2"
-            app:layout_constraintTop_toBottomOf="@id/iv_avatar_time_2"
+            app:layout_constraintEnd_toEndOf="@id/iv_away_team"
+            app:layout_constraintStart_toStartOf="@id/iv_away_team"
+            app:layout_constraintTop_toBottomOf="@id/iv_away_team"
             tools:text="Time 2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
